fixed mobile menu fixed header image

--- a/angebote/index.html
+++ b/angebote/index.html
@@ -129,10 +129,10 @@ title: "Angebote"
     </div>
     <br>
     <div class="container text__black">
-        <div class="col-lg-8 col-lg-offset-2">
+        <div class="col-lg-8 col-lg-offset-2" style="padding:0;">
             <h3>Weitere Angebote</h3>
         </div>
-            <div class="col-lg-9 col-lg-offset-2">
+            <div class="col-lg-9 col-lg-offset-2 gradient-box">
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                        <b id="Train">Train-the-Trainer:</b><br>
@@ -140,7 +140,7 @@ title: "Angebote"
                     </p>
                 </div>
             </div>
-            <div class="col-lg-9 "> 
+            <div class="col-lg-9 gradient-box">
                 <div class="fond_purple_gradient join__statement text__white">
                     <p>
                          <b id="AG">Digital-AGs</b> <br>
@@ -148,7 +148,7 @@ title: "Angebote"
                      </p>
                 </div>
             </div>
-            <div class="col-lg-9 col-lg-offset-3">
+            <div class="col-lg-9 col-lg-offset-3 gradient-box">
                 <div class="fond_blue_gradient join__statement text__white"> 
                     <p>
                         <b id="TV">WebTV-Format</b> <br>
