--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ sponsor: yes
 title: Hello
 ---
 
-<div class="parallax first"></div>
+<!--<div class="parallax first"></div>-->
 </div>
 <!--
 <div class="hero-container fond_green_gradient margin-top-huge">
@@ -61,7 +61,7 @@ title: Hello
     <div class="container text__black">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2 class="text-center">Neues, News und Neuigkeiten</h2>
+                <h2 class="text-left">Neues, News und Neuigkeiten</h2>
             </div>
         </div>
         <br>
