--- a/team/index.html
+++ b/team/index.html
@@ -27,21 +27,21 @@ title: "&uuml;ber uns"
         <div class="container text__black">
             <div class="beneath-sections">
                 <h1 class="text-center">Und das sind wir</h1>
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:sebastian.seitz@okfn.de"> <img class="img-circle member-avatar" alt="Sebastian Seitz" src="/img/avatars/sebastian.jpg"></a>
                     <p>
                          <span class="speaker-name"><a class="text__blue" href="mailto:sebastian.seitz@okfn.de">Sebastian Seitz</a></span>Projektleiter <br> sebastian.seitz@okfn.de
                     </p>
                 </div>
 
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:matthias.loewe@okfn.de"><img class="img-circle member-avatar" alt="Matthias Löwe" src="/img/avatars/matthias.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue" href="mailto:matthias.loewe@okfn.de">Matthias Löwe</a></span>Projektmanager Workshops<br> matthias.loewe@okfn.de
                     </p>
                 </div>
 
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:saadya.windauer@okfn.de"><img class="img-circle member-avatar" alt="Saadya Windauer" src="/img/avatars/saadya.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue" href="mailto:saadya.windauer@okfn.de">Saadya Windauer</a> </span>Projektmanagerin Kooperationen<br> saadya.windauer@okfn.de
@@ -50,34 +50,34 @@ title: "&uuml;ber uns"
             </div>
 
             <div class="beneath-sections">
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:jasmin.helm@okfn.de"><img class="img-circle member-avatar" alt="Jasmin Helm" src="/img/avatars/jasmin.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a> </span>Projektmanagerin Kommunikation<br> jasmin.helm@okfn.de
                     </p>
                 </div>
 
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:paula.glaser@okfn.de"><img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin Finanzen<br> paula.glaser@okfn.de
                     </p>
                 </div>
 
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:maria.reimer@okfn.de"><img class="img-circle member-avatar" alt="Maria Reimer" src="/img/avatars/maria.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:maria.reimer@okfn.de">Maria Reimer</a> </span>Projektkoordination <br> maria.reimer@okfn.de
                     </p>
                 </div>    
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:juliane.krueger@okfn.de""><img class="img-circle member-avatar" alt="Juliane Krueger" src="/img/avatars/juliane2.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span>Projektassistenz Finanzen<br> juliane.krueger@okfn.de
                     </p>
                 </div>
 
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:nadine.stammen@okfn.de"><img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Design Lead<br> nadine.stammen@okfn.de
@@ -85,26 +85,26 @@ title: "&uuml;ber uns"
                     </p>
                 </div>
   
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:leonard.wolf@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter<br> leonard.wolf@okfn.de
                     </p>
                 </div>
 
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:moritz.neujeffski@okfn.de"><img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Modulmanagement Bedarfsanalyse<br> moritz.neujeffski@okfn.de
                     </p>
                 </div>
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:helene.hahn@okfn.de"><img class="img-circle member-avatar" alt="Helene Hahn" src="/img/avatars/helene.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Modulleitung Bedarfsanalyse<br> helene.hahn@okfn.de
                     </p>
                 </div>
-                <div class="members col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:knut.perseke@okfn.de"><img class="img-circle member-avatar" alt="Knut Perseke" src="/img/avatars/knut.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:knut.perseke@okfn.de">Knut Perseke</a> </span>Tech Lead<br> knut.perseke@okfn.de
