--- a/projekt/index.html
+++ b/projekt/index.html
@@ -27,17 +27,17 @@ title: "Projekt"
         <h2 class="title text-center">Wir wollen...</h2>
         <div class="row">
             <div class="col-md-4">
-                <p class="text-left">
+                <p class="text-left projekt-textblock">
                     ...  spielerische R&auml;ume schaffen, in denen sich Jugendliche als Teilhaber einer politischen Gesellschaft ausprobieren k&ouml;nnen, und sie dazu ermutigen, sich mit Hilfe von digitalen Kompetenzen, Werkzeugen &amp; Technologien selbstbestimmt und aktiv an gesellschaftlichen Prozessen zu beteiligen.
                 </p>
             </div>
             <div class="col-md-4">
-                <p class="text-left">
+                <p class="text-left projekt-textblock">
                   ... in Zeiten von Fake News, Hate Speech und Populismus das Internet für und mit jungen Menschen als positiven Gestaltungsraum für die politische Öffentlichkeit zurückerobern und die &ouml;ffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven Jugendlicher bereichern.
                 </p>
             </div>
             <div class="col-md-4">
-               <p class="text-left">
+               <p class="text-left projekt-textblock">
                   ... Mitarbeiter*innen in Jugendeinrichtungen neue Zug&auml;nge zur Digitalisierung erm&ouml;glichen, deren gesellschaftliche Bedeutung diskutieren und sie dazu bef&auml;higen, unsere Formate jederzeit eigenst&auml;ndig und unkompliziert durchf&uuml;hren zu k&ouml;nnen.
                 </p>
             </div>    
