--- a/team/index.html
+++ b/team/index.html
@@ -91,6 +91,13 @@ title: "&uuml;ber uns"
                         <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter<br> leonard.wolf@okfn.de
                     </p>
                 </div>
+                                                                                                            
+                <div class="members col-sm-6 col-lg-4">
+                    <a href="mailto:lea.pfau@okfn.de"><img class="img-circle member-avatar" alt="Lea Pfau" src="/img/avatars/lea.jpg"></a>
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:lea.pfau@okfn.de">Lea Pfau</a> </span>Studentische Mitarbeiterin<br> lea.pfau@okfn.de
+                    </p>
+                </div>
 
                 <div class="members col-sm-6 col-lg-4">
                     <a href="mailto:moritz.neujeffski@okfn.de"><img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg"></a>
