news teaser updates event teaser added (check /_data/events-vorlage.yml)

--- a/angebote/index.html
+++ b/angebote/index.html
@@ -27,12 +27,12 @@ title: "Angebote"
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
 
-                <h1>F&uuml;r Jugendliche &amp; Jugendeinrichtungen</h1>
+                <h1 class="section-headline">F&uuml;r Jugendliche &amp; Jugendeinrichtungen</h1>
                 <p class="text">
                     F&uuml;r Jugendliche und außerschulische Jugendeinrichtungen haben wir verschiedene Workshop- und Aktionsformate entwickelt. Eine Auswahl findet ihr hier: 
                 </p><br>
 
-                <h3>Workshops Workshops Workshops</h3>
+                <h2>Workshops Workshops Workshops</h2>
                 <div class="panel-group" id="accordion">
                     <div class="panel">
                         <h4>
@@ -130,7 +130,7 @@ title: "Angebote"
     <br>
     <div class="container text__black">
         <div class="col-lg-8 col-lg-offset-2" style="padding:0;">
-            <h3>Weitere Angebote</h3>
+            <h2>Weitere Angebote</h2>
         </div>
             <div class="col-lg-9 col-lg-offset-2 gradient-box">
                 <div class="fond_red_gradient join__statement text__white">
@@ -194,8 +194,8 @@ title: "Angebote"
     <div class="beneath-sections jumbotron fond_blue_gradient"  id="WS">
         <div class="container text__white">
             <div class="row">
-                <div class="col-lg-9 col-lg-offset-1 title">
-                    <h2>F&uuml;r Jugendverb&auml;nde &amp; gemeinn&uuml;tzige Organisationen</h2>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2 class="section-headline">F&uuml;r Jugendverb&auml;nde &amp; gemeinn&uuml;tzige Organisationen</h2>
                     <p>
                         <br>Digitaler Werkzeugkasten f&uuml;r &uuml;berregionale Jugendverb&auml;nde &amp; gemeinn&uuml;tzige Organisationen:</br>
                         <br> Wir wollen Tr&auml;ger und Einrichtungen der Kinder- und Jugendarbeit auf dem Weg in die Digitalisierung begleiten. In unserem zweit&auml;gigen Workshop experimentieren wir mit digitalen Tools und zeigen beispielsweise wie man mit Daten gute Stories erz&auml;hlen kann. Dazu f&uuml;hren wir zun&auml;chst eine Bedarfsanalyse durch, aus deren Ergebnisse wir dann einen Workshop entwickeln. Dieser ist auf die Bed&uuml;rfnisse und Fragen der Initiativen zugeschnitten und enth&auml;lt einige Tipps &amp; Tools f&uuml;r eine gute Datenarbeit. Alle Lernmaterialien werden im Anschluss in einem „Werkzeugkoffer” frei zug&auml;nglich bereitgestellt. Mehr Infos zu digitalen Projekten und datengest&uuml;tzter Arbeit gibt es <a class="highlight-white" href="https://datenschule.de">hier.</a>
@@ -209,8 +209,8 @@ title: "Angebote"
     <div class="beneath-sections jumbotron fond__white">
         <div class="container text__black">
             <div class="row">
-                <div class="col-lg-9 col-lg-offset-1 title">
-                    <h2>Materialien</h2>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2 class="section-headline">Materialien</h2>
                     <p class="text">
                         Unsere Workshops, Konzepte &amp; Lernmaterialien sollen f&uuml;r jede*n jederzeit zug&auml;nglich, nachvollziehbar und leicht erlernbar sein. Daher ver&ouml;ffentlichen wir an dieser Stelle alle Materialien aus unseren Angeboten unter freier Lizenz. 
                     </p>
