--- a/presse/index.html
+++ b/presse/index.html
@@ -9,7 +9,7 @@ title: Presse
 <div class="beneath-sections jumbotron fond__white margin-top-huge">
 	<div class="container text__black">
 		<div class="row">
-			<div class="col-lg-12 title">
+			<div class="col-lg-8 col-lg-offset-2 title">
 				<h1> Infomaterial </h1>
 				<p>
 					Hier findet ihr alle Infomaterialien zum Download. <br>
