--- a/projekt/index.html
+++ b/projekt/index.html
@@ -11,8 +11,8 @@ title: "Projekt"
 <div class="beneath-sections jumbotron fond__white">
     <div class="container text__black">
         <div class="row">
-            <div class="col-lg-9 col-lg-offset-1">
-                <h1 class="text-center">Das Projekt</h1>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1 class="text-center section-headline">Das Projekt</h1>
                 <p>
                    <br> Die Demokratielabore sind ein Modellprojekt der <a class="highlight-grey" href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom <a class="highlight-grey" href="http://www.bmfsfj.de">Bundesministerium f&uuml;r Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="http://www.demokratie-leben.de/">Demokratie leben!</a> gef&ouml;rdert wird. </br>
                    <br> Wir f&uuml;hren verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch &uuml;berregionalen Jugendverb&auml;nden und Initiativen zusammen – deutschlandweit. </br>
@@ -24,7 +24,7 @@ title: "Projekt"
 
 <div class="beneath-sections jumbotron fond_red_gradient">
     <div class="container text__white">
-        <h2 class="title text-center">Wir wollen...</h2>
+        <h2 class="section-headline text-center">Wir wollen...</h2>
         <div class="row">
             <div class="col-md-4">
                 <p class="text-left projekt-textblock">
@@ -48,10 +48,10 @@ title: "Projekt"
 <div class="beneath-sections fond__white jumbotron">
     <div class="container text__black">
         <div class="row">
-            <div class="col-lg-9 col-lg-offset-1 text-center">
-                <h2>Unsere Angebote</h2>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2 class="section-headline">Unsere Angebote</h2>
             </div>
-            <div class="col-lg-9 col-lg-offset-1">
+            <div class="col-lg-8 col-lg-offset-2">
                 <p> F&uuml;r die Umsetzung unseres Vorhabens haben wir verschiedene Angebote f&uuml;r Jugendliche und Jugendeinrichtungen entwickelt. Dazu z&auml;hlen unterschiedliche <a class="highlight-grey" href="/angebote/#Workshops">Workshops</a>, die nach einer Schulung mit Hilfe unseres <a class="highlight-grey"href="/angebote/#Train">Train-the-Trainers-Konzeptes</a> direkt an p&auml;dagogische Fachkr&auml;fte und engagierte Jugendliche weitergegeben werden. 
                 <br><br> 
                 Wir m&ouml;chten auch das Communitybuilding f&ouml;rdern und bieten Hilfe bei der Entstehung von <a href="/angebote/#AG">Demokratie-AGs</a> in Jugendeinrichtungen an. In unserem <a class="highlight-grey" href="/angebote/#TV">WebTV-Channel</a> gibt es außerdem regelm&auml;ßig Sendungen zu netzpolitischen und gesellschaftlichen Themen, die die Jugendlichen selbst mitgestalten k&ouml;nnen. 
@@ -67,10 +67,10 @@ title: "Projekt"
 <div class="beneath-sections jumbotron fond_blue_gradient">
     <div class="container text__white">
         <div class="row">
-            <div class="col-lg-9 col-lg-offset-1 text-center">
-                <h2>Evaluation</h2>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2 class="section-headline">Evaluation</h2>
             </div>
-            <div class="col-lg-9 col-lg-offset-1">
+            <div class="col-lg-8 col-lg-offset-2">
                 <p>
                     Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualit&auml;t unseres Angebots zu sichern, begleitet uns bei diesem Vorhaben das <a class="highlight-grey" href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a> aus Berlin, das uns sowohl bei der Konzeption unserer Formate ber&auml;t, als auch einige Workshop-Durchf&uuml;hrungen in Jugendeinrichtungen bis Ende 2017 evaluiert. Die Ergebnisse der Evaluation werden in einem Abschlussbericht unter freier Lizenz ver&ouml;ffentlicht. 
                 </p>
@@ -81,10 +81,8 @@ title: "Projekt"
 
 <div class="beneath-sections jumbotron fond__white">
     <div class="container">
+        <h2 class="section-headline text-center">Unser Leitbild</h2>
         <div class="row">
-            <div class="col-lg-9 col-lg-offset-1 text-center">
-                <h2>Unser Leitbild</h2>
-            </div>
             <div class="col-md-4">
                 <p class="text-left">
                     Die Richtlinien des <a href="http://www.bpb.de/die-bpb/51310/beutelsbacher-konsens">Beutelsbacher Konsens</a> sind maßgeblich und richtungsweisend in unserer Jugendbildungsarbeit.
