--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -12,21 +12,22 @@ title: "Mitmachen!"
 <div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 title">
-                <h1>Wer kann bei den Demokratielaboren mitmachen?</h1>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1 class="section-headline">Wer kann bei den Demokratielaboren mitmachen?</h1>
                 <p>
-                   Mit den Demokratielaboren richten wir uns zum einen an <strong>Jugendliche</strong> zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr &uuml;ber Aktivismus und gesellschaftliche Teilhabe lernen wollen. <br> <a class="highlight-grey" href="#Jugendliche">☟ mehr erfahren</a>
+                   Mit den Demokratielaboren richten wir uns zum einen an <strong>Jugendliche</strong> zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr &uuml;ber Aktivismus und gesellschaftliche Teilhabe lernen wollen. <br>
                 </p>
+                <a class="post-teaser-read-more" href="#Jugendliche">mehr erfahren</a>
 
                 <p>
                    Zum anderen richten wir uns an <strong>p&auml;dagogische Fachkr&auml;fte und Jugendeinrichtungen</strong>, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verst&auml;ndliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu k&ouml;nnen.<br>
-                   <a class="highlight-grey" href="#Jugendeinrichtung">☟ mehr erfahren</a>
                 </p>
+                <a class="post-teaser-read-more" href="#Jugendeinrichtung">mehr erfahren</a>
 
                 <p>
-                   Auch als <strong>Jugendverband, Tr&auml;ger und Einrichtung der Kinder- und Jugendarbeit oder NGO</strong> kann man mitmachen und etwas &uuml;ber digitales und datengest&uuml;tzte Arbeit lernen. <br> 
-                   <a class="highlight-grey" href="#Jugendverband">☟ mehr erfahren</a>
+                   Auch als <strong>Jugendverband, Tr&auml;ger und Einrichtung der Kinder- und Jugendarbeit oder NGO</strong> kann man mitmachen und etwas &uuml;ber digitales und datengest&uuml;tzte Arbeit lernen. <br>
                 </p>
+                <a class="post-teaser-read-more" href="#Jugendverband">mehr erfahren</a>
 
                 <p>
                    Wichtig ist uns vor allem die Vielfalt: Wir wollen mit Jugendlichen &amp; Einrichtungen in ganz Deutschland zusammenarbeiten. Egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld*in: <strong>Jede*r ist bei uns willkommen!</strong>
@@ -38,8 +39,8 @@ title: "Mitmachen!"
 <div class="beneath-sections jumbotron fond_darkblue_gradient" id="Jugendliche">  <a name="anchor_jugendliche"></a>
     <div class="container text__white">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 title">
-                <h2 >Als Jugendliche*r</h2>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2 class="section-headline">Als Jugendliche*r</h2>
                <p class="text">
                     Du hast Lust, an einem unserer Workshops oder Aktionen teilzunehmen? Toll! Dann wirf am besten als erstes einen Blick auf unsere Termine, denn dort kannst du sehen, ob wir bald in deiner N&auml;he sind. Falls nicht, schreib uns gerne eine <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Mail</a></b> und wir schauen, ob wir z.B. in deinem Jugendclub etwas organisieren k&ouml;nnen.
                </p>
@@ -54,8 +55,8 @@ title: "Mitmachen!"
 
  <div class="beneath-sections jumbotron fond__white" id="Jugendeinrichtung">
     <div class="container text__black">
-        <div class="col-lg-9 col-lg-offset-2">
-            <h2> Als Jugendeinrichtung</h2>
+        <div class="col-lg-10 col-lg-offset-2">
+            <h2 class="section-headline"> Als Jugendeinrichtung</h2>
 
             <div class="fond_red_gradient join__statement text__white">
                 <p>
@@ -94,7 +95,7 @@ title: "Mitmachen!"
  <div class="beneath-sections jumbotron fond__white" id="Jugendverband">
     <div class="container text__black">
         <div class="col-lg-8 col-lg-offset-2 ">
-            <h2>Als Jugendverband, Tr&auml;ger und Einrichtung in der Kinder- und Jugendarbeit oder gemeinn&uuml;tzige Organisation</h2>
+            <h2 class="section-headline" >Als Jugendverband, Tr&auml;ger und Einrichtung in der Kinder- und Jugendarbeit oder gemeinn&uuml;tzige Organisation</h2>
             <p class="text">
                 Wie k&ouml;nnen Tr&auml;ger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweit&auml;gigen Workshop zeigen wir euch wie ihr mehr aus Daten machen k&ouml;nnt. Zus&auml;tzlich beraten wir gemeinn&uuml;tzige Organisationen, wie sie ihre digitalen F&auml;higkeiten vertiefen und aufbauen k&ouml;nnen. Interessiert? Dann schreibt uns eine <b><a class="highlight-grey" class="text__black" href="mailto:info@demokratielabore.de">Mail.</a></b> Weitere Infos zur digitalen M&uuml;ndigkeit für gemeinn&uuml;tzige Akteure findet ihr auch bei der <a class="highlight-grey"  href="https://datenschule.de/">Datenschule</a>.      
             </p>
