--- a/team/index.html
+++ b/team/index.html
@@ -35,9 +35,9 @@ title: "&uuml;ber uns"
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:saadya.windauer@okfn.de"><img class="img-circle member-avatar" alt="Saadya Windauer" src="/img/avatars/saadya.jpg"></a>
+                    <a class="members-image-wrap" href="mailto:lydia.boettcher@okfn.de"><img class="img-circle member-avatar" alt="Lydia Böttcher" src="/img/avatars/lydia.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="mailto:saadya.windauer@okfn.de">Saadya Windauer</a> </span>Projektmanagerin Kooperationen<br> saadya.windauer@okfn.de
+                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Lydia Böttcher</a> </span>Projektmanagerin Kooperationen<br> lydia.boettcher@okfn.de
                     </p>
                 </div>
             </div>
