--- a/presse/index.html
+++ b/presse/index.html
@@ -15,6 +15,9 @@ title: Presse
 					Hier findet ihr alle Infomaterialien zum Download. <br>
 					<br> Presseanfragen bitte an: <b><a class="text__blue text__black" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a></b>
 				</p>
+				<h1> Pressespiegel </h1>
+				<p>
+					<li><span class="bold">01. Januar 2018</span> | <a href="https://www.fritz.de/programm/sendungen/sendungen/40/trackback/2017/180106-trb-550-henrike-moeller.html">Neues Webvideo-Format über Netzpolitik</a> (Fritz Radio/rbb)</li></ul> 
 			</div>
 		</div>
 	</div>
