--- a/presse/index.html
+++ b/presse/index.html
@@ -12,7 +12,8 @@ title: Presse
 			<div class="col-lg-8 col-lg-offset-2 title">
 				<h1> Infomaterial </h1>
 				<p>
-					Hier findet ihr alle Infomaterialien zum Download. <br>
+					Hier findet ihr alle Infomaterialien zum Download. 
+					<br>
 					<a href="/presse/Projektbeschreibung_Demokratielabore.pdf" download="/presse/Projektbeschreibung_Demokratielabore.pdf">Projektbeschreibung Demokratielabore</a>
 				</p>
 				<h1> Pressespiegel </h1>
