--- a/presse/index.html
+++ b/presse/index.html
@@ -12,8 +12,8 @@ title: Presse
 			<div class="col-lg-8 col-lg-offset-2 title">
 				<h1> Infomaterial </h1>
 				<p>
-					Hier findet ihr alle Infomaterialien zum Download: <br>
-					<a class="text__blue text__black" href="/presse/Projektbeschreibung_Demokratielabore.pdf" download="/presse/Projektbeschreibung_Demokratielabore.pdf">Projektbeschreibung Demokratielabore</a>
+					Hier findet ihr alle Infomaterialien zum Download: 
+					<br><a class="text__blue text__black" href="/presse/Projektbeschreibung_Demokratielabore.pdf" download="/presse/Projektbeschreibung_Demokratielabore.pdf">Projektbeschreibung Demokratielabore</a></br>
 				</p>
 				<h1> Pressespiegel </h1>
 					<li><span class="bold">06.01.2018</span> | <a href="https://www.fritz.de/programm/sendungen/sendungen/40/trackback/2017/180106-trb-550-henrike-moeller.html">Neues Webvideo-Format über Netzpolitik</a> (Fritz Radio/rbb)</li></ul>
