--- a/angebote/index.html
+++ b/angebote/index.html
@@ -144,7 +144,7 @@ title: "Angebote"
                 <div class="fond_purple_gradient join__statement text__white">
                     <p>
                          <b id="AG">Digital-AGs</b> <br>
-                       Ihr habt nach den Workshops Lust bekommen, euch noch mehr mit diesen Themen zu besch&auml;ftigen? Super! Wir m&ouml;chten euch dabei unterst&uuml;tzen, z.B. durch die Gr&uuml;ndung einer AG in eurer Jugendeinrichtung, in der ihr zu aktuellen gesellschaftlichen und digital gestützten Themen eurer Wahl arbeiten k&ouml;nnt. Ein erstes Thema k&ouml;nnte die Bundestagswahl im September 2017 sein: Was haltet ihr davon, gemeinsam Wahl(daten)parties zu planen?
+                       Ihr habt nach den Workshops Lust bekommen, euch noch mehr mit diesen Themen zu besch&auml;ftigen? Super! Wir m&ouml;chten euch dabei unterst&uuml;tzen, z.B. durch die Gr&uuml;ndung einer AG in eurer Jugendeinrichtung, in der ihr zu aktuellen gesellschaftlichen und digital gestützten Themen eurer Wahl arbeiten k&ouml;nnt.
                      </p>
                 </div>
             </div>
