--- a/angebote/index.html
+++ b/angebote/index.html
@@ -151,8 +151,8 @@ title: "Angebote"
             <div class="col-lg-9 col-lg-offset-3 gradient-box">
                 <div class="fond_blue_gradient join__statement text__white"> 
                     <p>
-                        <b id="TV">WebTV-Format</b> <br>
-                        Wir wollen in einem WebTV-Format w&ouml;chentlich gemeinsam mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen produzieren. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt &uuml;ber? <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Dann meldet euch bei uns!</a></b>                
+                        <b id="TV">Webvideo-Channel</b> <br>
+                        In unserem Webvideo-Channel <a href="https://www.facebook.com/aboutblankvideo">about:blank</a> produzieren wir w&ouml;chentlich gemeinsam mit unseren Partnern <a href="http://medialepfade.org">medialepfade.org</a>, <a href="https://netzpolitik.org">netzpolitik.org</a> und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt &uuml;ber? <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Dann meldet euch bei uns!</a></b>                
                     </p>
                 </div>
             </div>
