--- a/angebote/index.html
+++ b/angebote/index.html
@@ -152,7 +152,7 @@ title: "Angebote"
                 <div class="fond_blue_gradient join__statement text__white"> 
                     <p>
                         <b id="TV">Webvideo-Channel</b> <br>
-                        In unserem Webvideo-Channel <a href="https://www.facebook.com/aboutblankvideo">about:blank</a> produzieren wir w&ouml;chentlich gemeinsam mit unseren Partnern <a href="http://medialepfade.org">medialepfade.org</a>, <a href="https://netzpolitik.org">netzpolitik.org</a> und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt &uuml;ber? <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Dann meldet euch bei uns!</a></b>                
+                        In unserem Webvideo-Channel <a href="https://www.facebook.com/aboutblankvideo">about:blank</a> produzieren wir w&ouml;chentlich gemeinsam mit unseren Partnern <a href="http://www.medialepfade.org">medialepfade.org</a>, <a href="https://netzpolitik.org">netzpolitik.org</a> und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt &uuml;ber? <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Dann meldet euch bei uns!</a></b>                
                     </p>
                 </div>
             </div>
