--- a/presse/index.html
+++ b/presse/index.html
@@ -1,21 +1,20 @@
 ---
 layout: base
 title: Presse
+hide_hero: true
 ---
 
-
-<!-- About -->
-
-<div class="beneath-sections jumbotron fond__white margin-top-huge">
-	<div class="container text__black">
-		<div class="row">
-			<div class="col-lg-8 col-lg-offset-2 title">
-				<h1> Infomaterial </h1>
-				<p>
-					Hier findet ihr alle Infomaterialien zum Download. <br>
-					<br> Presseanfragen bitte an: <b><a class="text__blue text__black" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a></b>
-				</p>
-			</div>
-		</div>
-	</div>
+<!-- presse -->
+<div class="beneath-sections jumbotron fond__grey">
+    <div class="container text__black">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1 class="text-center section-headline">Infomaterial</h1>
+                <p>
+                    Hier findet ihr alle Infomaterialien zum Download. <br>
+                    <br> Presseanfragen bitte an: <b><a class="text__blue text__black" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a></b>
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
