--- a/projekt/index.html
+++ b/projekt/index.html
@@ -1,12 +1,7 @@
 ---
 layout: base
 title: "Projekt"
-
 ---
-
-<!-- Info -->
-<div class="parallax"></div>
-</div>
 
 <div class="beneath-sections jumbotron fond__white">
     <div class="container text__black">
@@ -56,10 +51,12 @@ title: "Projekt"
                 <br><br> 
                 Wir m&ouml;chten auch das Communitybuilding f&ouml;rdern und bieten Hilfe bei der Entstehung von <a href="/angebote/#AG">Demokratie-AGs</a> in Jugendeinrichtungen an. In unserem <a class="highlight-grey" href="/angebote/#TV">WebTV-Channel</a> gibt es außerdem regelm&auml;ßig Sendungen zu netzpolitischen und gesellschaftlichen Themen, die die Jugendlichen selbst mitgestalten k&ouml;nnen. 
                 <br><br>  
-                &Uuml;berregionalen Jugendverb&auml;nden und Initiativen bieten wir die M&ouml;glichkeit bei einem <a class="highlight-grey" href="/angebote/#WS">Workshop</a> zum Thema Daten und Digitalisierung Tipps, Tricks und Tools f&uuml;r ihre eigenen digitalen Projekte kennenzulernen. <br> 
-                    <a href="/angebote"><button class="btn btn-start">Mehr erfahren!</button> </a> 
+                &Uuml;berregionalen Jugendverb&auml;nden und Initiativen bieten wir die M&ouml;glichkeit bei einem <a class="highlight-grey" href="/angebote/#WS">Workshop</a> zum Thema Daten und Digitalisierung Tipps, Tricks und Tools f&uuml;r ihre eigenen digitalen Projekte kennenzulernen. <br>
                 </p>
-            </div>  
+                <div class="btn-wrap">
+                    <a href="/angebote"><button class="btn btn-start">Mehr erfahren!</button> </a>
+                </div>
+            </div>
         </div>
      </div>
 </div>
