--- a/impressum/index.html
+++ b/impressum/index.html
@@ -3,108 +3,104 @@ layout: default
 navigation: yes
 footerlogos: yes
 title: "Impressum"
+hide_hero: true
 ---
 
-<!-- Hero -->
+<div class="beneath-sections jumbotron fond__grey">
+    <div class="container text__black">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1 class="text-center section-headline">{{ page.title }}</h1>
+                <p>
+                    Die Open Knowledge Foundation Deutschland ist ein eingetragener Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite sind, sofern nicht anders angegeben, nach <a href="https://creativecommons.org/licenses/by/4.0/legalcode.de">Creative Commons 4.0 Namensnennung</a> lizensiert.
+                </p>
+                <p>
+                    Open Knowledge Foundation Deutschland e.V. <br />
+                    Singerstr. 109 <br />
+                    10179 Berlin <br />
+                    Deutschland <br /><br />
+                    Fon: +49 30 57703666–2  <br />
+                    Fax: +49 30 57703666-9<br />
+                </p>
 
-<div class="jumbotron fond__grey">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-9">
-        <h2>{{ page.title }}</h2>
 
-        <p>
-        Die Open Knowledge Foundation Deutschland ist ein eingetragener Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite sind, sofern nicht anders angegeben, nach <a href="https://creativecommons.org/licenses/by/4.0/legalcode.de">Creative Commons 4.0 Namensnennung</a> lizensiert.
-        </p>
-
-        <p>
-          Open Knowledge Foundation Deutschland e.V. <br />
-          Singerstr. 109 <br />
-          10179 Berlin <br />
-          Deutschland <br /><br />
-          Fon: +49 30 57703666–2  <br />
-          Fax: +49 30 57703666-9<br />
-        </p>
-        
-
-        <p>Illustration: <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode.de">CC BY-SA 4.0</a> <a href="http://bildbauer.de/">Christoph Hoppenbrock</a></p>    
+                <p>Illustration: <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode.de">CC BY-SA 4.0</a> <a href="http://bildbauer.de/">Christoph Hoppenbrock</a></p>
 
 
 
-          
-            <p>&nbsp;</p>
 
-            <h2>Haftungsausschluss</h2>
+                <p>&nbsp;</p>
 
-            <p>Inhaltlich verantwortlich gem&auml;ß § 55 Abs. 2 RStV ist der jeweilige Autor eines Textes.</p>
-            <br>
+                <h2>Haftungsausschluss</h2>
 
-            <h3>Haftung für Inhalte</h3>
+                <p>Inhaltlich verantwortlich gem&auml;ß § 55 Abs. 2 RStV ist der jeweilige Autor eines Textes.</p>
+                <br>
 
-            <p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollst&auml;ndigkeit und Aktualit&auml;t der Inhalte können wir jedoch keine Gew&auml;hr übernehmen. Als Diensteanbieter sind wir gem&auml;ß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach § 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
+                <h3>Haftung für Inhalte</h3>
 
-            <br>
+                <p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollst&auml;ndigkeit und Aktualit&auml;t der Inhalte können wir jedoch keine Gew&auml;hr übernehmen. Als Diensteanbieter sind wir gem&auml;ß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach § 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
 
-            <h3>Haftung für Links</h3>
+                <br>
 
-            <p>Unser Angebot enth&auml;lt Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gew&auml;hr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
+                <h3>Haftung für Links</h3>
 
-            <br>
+                <p>Unser Angebot enth&auml;lt Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gew&auml;hr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
 
-            <h2>Urheberrecht</h2>
+                <br>
 
-            <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Sie sind mit einer Creative Commons Lizenz urheberrechtlich geschützt. Sofern nicht anders angegeben, stehen die Inhalte dieser Seite unter der <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons CC by 4.0 Lizenz</a>. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+                <h2>Urheberrecht</h2>
 
-            <br>
+                <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Sie sind mit einer Creative Commons Lizenz urheberrechtlich geschützt. Sofern nicht anders angegeben, stehen die Inhalte dieser Seite unter der <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons CC by 4.0 Lizenz</a>. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
 
-            <h2>Datenschutzerkl&auml;rung</h2>
+                <br>
 
-            <p>I. Datenerhebung und Datenverarbeitung</p>
+                <h2>Datenschutzerkl&auml;rung</h2>
 
-            <p>Die Sicherheit Ihrer Daten hat bei uns höchste Priorit&auml;t. Wir ergreifen jede nur mögliche Maßnahme, um Ihre persönlichen Daten vor unbefugtem Zugriff zu schützen. S&auml;mtliche Anforderungen des Bundesdatenschutzgesetzes (BDSG), Telemediengesetzes (TMG) sowie alle weiteren datenschutzrechtlichen Vorschriften werden von uns eingehalten. Sie können unsere Seite besuchen, ohne Angaben zu Ihrer Person zu machen. Wir speichern dann lediglich Zugriffsdaten ohne Personenbezug. Dabei handelt es sich z.B. um Daten</p>
+                <p>I. Datenerhebung und Datenverarbeitung</p>
 
-            <ul>
-              <li>der Rechneradresse (IP-Adresse) in gekürzter Form,</li>
-              <li>der Seite, von der aus die Datei angefordert wurde,</li>
-              <li>dem Namen der übertragenen Datei,</li>
-              <li>dem Datum und der Uhrzeit der Abfrage,</li>
-              <li>der übertragenen Datenmenge,</li>
-              <li>dem Zugriffsstatus (Datei übertragen, Datei nicht gefunden etc.) und</li>
-              <li>einer Beschreibung des Typs des verwendeten Webbrowsers.</li>
-            </ul>
+                <p>Die Sicherheit Ihrer Daten hat bei uns höchste Priorit&auml;t. Wir ergreifen jede nur mögliche Maßnahme, um Ihre persönlichen Daten vor unbefugtem Zugriff zu schützen. S&auml;mtliche Anforderungen des Bundesdatenschutzgesetzes (BDSG), Telemediengesetzes (TMG) sowie alle weiteren datenschutzrechtlichen Vorschriften werden von uns eingehalten. Sie können unsere Seite besuchen, ohne Angaben zu Ihrer Person zu machen. Wir speichern dann lediglich Zugriffsdaten ohne Personenbezug. Dabei handelt es sich z.B. um Daten</p>
 
-            <p>Diese Daten werden ausschließlich zur Verbesserung unseres Angebotes ausgewertet und erlauben keine Rückschlüsse auf Ihre Person.</p>
+                <ul>
+                    <li>der Rechneradresse (IP-Adresse) in gekürzter Form,</li>
+                    <li>der Seite, von der aus die Datei angefordert wurde,</li>
+                    <li>dem Namen der übertragenen Datei,</li>
+                    <li>dem Datum und der Uhrzeit der Abfrage,</li>
+                    <li>der übertragenen Datenmenge,</li>
+                    <li>dem Zugriffsstatus (Datei übertragen, Datei nicht gefunden etc.) und</li>
+                    <li>einer Beschreibung des Typs des verwendeten Webbrowsers.</li>
+                </ul>
 
-            <p>II. Erhebung und Speicherung personenbezogener</p>
+                <p>Diese Daten werden ausschließlich zur Verbesserung unseres Angebotes ausgewertet und erlauben keine Rückschlüsse auf Ihre Person.</p>
 
-            <p>Daten Personenbezogene Daten wie Name, Username und zus&auml;tzliche Metadaten wie z. B. Anschrift, Telefonnummer und Email-Adresse (Bestandsdaten) werden erhoben, wenn und soweit dies im Rahmen der Begründung und Abwicklung eines Vertragsverh&auml;ltnisses sowie für dessen inhaltliche Ausgestaltung oder &Auml;nderung erforderlich ist. Diese Daten werden in der Regel in elektronischen Anmeldeformularen erhoben. Mit vollst&auml;ndiger Abwicklung des Vertrages werden Ihre Daten für die weitere Verwendung gesperrt und nach Ablauf der steuer- und handelsrechtlichen Vorschriften gelöscht, sofern Sie nicht ausdrücklich in die weitere Nutzung Ihrer Daten eingewilligt haben.</p>
+                <p>II. Erhebung und Speicherung personenbezogener</p>
 
-            <p>III. Übermittlung von Daten an Dritte</p>
+                <p>Daten Personenbezogene Daten wie Name, Username und zus&auml;tzliche Metadaten wie z. B. Anschrift, Telefonnummer und Email-Adresse (Bestandsdaten) werden erhoben, wenn und soweit dies im Rahmen der Begründung und Abwicklung eines Vertragsverh&auml;ltnisses sowie für dessen inhaltliche Ausgestaltung oder &Auml;nderung erforderlich ist. Diese Daten werden in der Regel in elektronischen Anmeldeformularen erhoben. Mit vollst&auml;ndiger Abwicklung des Vertrages werden Ihre Daten für die weitere Verwendung gesperrt und nach Ablauf der steuer- und handelsrechtlichen Vorschriften gelöscht, sofern Sie nicht ausdrücklich in die weitere Nutzung Ihrer Daten eingewilligt haben.</p>
 
-            <p>Eine Weitergabe Ihrer personenbezogenen Daten an Dritte erfolgt grunds&auml;tzlich nur, sofern dies zur Erbringung unserer Dienstleistung oder zur Vertragsdurchführung notwendig ist und Sie ausdrücklich eingewilligt haben.</p>
+                <p>III. Übermittlung von Daten an Dritte</p>
 
-            <p>IV. Verwendung von Cookies</p>
+                <p>Eine Weitergabe Ihrer personenbezogenen Daten an Dritte erfolgt grunds&auml;tzlich nur, sofern dies zur Erbringung unserer Dienstleistung oder zur Vertragsdurchführung notwendig ist und Sie ausdrücklich eingewilligt haben.</p>
 
-            <p>Die Website www.okfn.de nutzt Piwik (http://www.piwik.org), einen Open-Source-Webanalysedienst. Piwik verwendet sogenannte &#8220;Cookies&#8221;, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglicht. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Website (einschließlich Ihrer IP-Adresse) bleiben dabei unter der Datenhoheit von www.okfn.de. Wir benutzen diese Informationen, um die Nutzung auszuwerten und um Reports über die Websiteaktivit&auml;ten zusammenzustellen. OKF DE wird diese Informationen nicht an Dritte übertragen. Sie können die Installation der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht s&auml;mtliche Funktionen dieser Website voll umf&auml;nglich nutzen können. Durch die Nutzung dieser Website erkl&auml;ren Sie sich mit der Bearbeitung der über Sie erhobenen Daten durch www.okfn.de in der zuvor beschriebenen Art und Weise und zu dem zuvor benannten Zweck einverstanden.</p>
+                <p>IV. Verwendung von Cookies</p>
 
-            <p>V. Newsletter</p>
+                <p>Die Website www.okfn.de nutzt Piwik (http://www.piwik.org), einen Open-Source-Webanalysedienst. Piwik verwendet sogenannte &#8220;Cookies&#8221;, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglicht. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Website (einschließlich Ihrer IP-Adresse) bleiben dabei unter der Datenhoheit von www.okfn.de. Wir benutzen diese Informationen, um die Nutzung auszuwerten und um Reports über die Websiteaktivit&auml;ten zusammenzustellen. OKF DE wird diese Informationen nicht an Dritte übertragen. Sie können die Installation der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht s&auml;mtliche Funktionen dieser Website voll umf&auml;nglich nutzen können. Durch die Nutzung dieser Website erkl&auml;ren Sie sich mit der Bearbeitung der über Sie erhobenen Daten durch www.okfn.de in der zuvor beschriebenen Art und Weise und zu dem zuvor benannten Zweck einverstanden.</p>
 
-            <p>Bei Anmeldung zum E-Mail-Newsletter wird Ihre E-Mailadresse mit Ihrer Einwilligung für eigene Zwecke genutzt, bis Sie sich vom Newsletter abmelden. Eine Abmeldung ist jederzeit über den dafür vorgesehenen Link im Newsletter oder eine entsprechende Mitteilung an uns möglich.</p>
+                <p>V. Newsletter</p>
 
-            <p>VI. Abrufbarkeit der Datenschutzerkl&auml;rung</p>
+                <p>Bei Anmeldung zum E-Mail-Newsletter wird Ihre E-Mailadresse mit Ihrer Einwilligung für eigene Zwecke genutzt, bis Sie sich vom Newsletter abmelden. Eine Abmeldung ist jederzeit über den dafür vorgesehenen Link im Newsletter oder eine entsprechende Mitteilung an uns möglich.</p>
 
-            <p>Sie können die Datenschutzerkl&auml;rung jederzeit von jeder Seite dieses Internetangebots unter dem Link „Impressum“ abrufen. Bitte nehmen Sie zur Kenntnis, dass &Auml;nderungen des Angebots, gesetzliche und rechtliche Neuerungen sowie ggf. nachtr&auml;glich erkannte Regelungslücken &Auml;nderungen dieser Datenschutzerkl&auml;rung erforderlich werden lassen können.</p>
+                <p>VI. Abrufbarkeit der Datenschutzerkl&auml;rung</p>
 
-            <p>VII. Fragen und Auskunftsrecht</p>
+                <p>Sie können die Datenschutzerkl&auml;rung jederzeit von jeder Seite dieses Internetangebots unter dem Link „Impressum“ abrufen. Bitte nehmen Sie zur Kenntnis, dass &Auml;nderungen des Angebots, gesetzliche und rechtliche Neuerungen sowie ggf. nachtr&auml;glich erkannte Regelungslücken &Auml;nderungen dieser Datenschutzerkl&auml;rung erforderlich werden lassen können.</p>
 
-            <p>Ihr Vertrauen ist uns wichtig. Daher möchten wir Ihnen jederzeit und kostenlos Rede und Antwort bezüglich der Verarbeitung Ihrer personenbezogenen Daten stehen. Auch haben Sie nach dem Bundesdatenschutzgesetz ein Recht auf unentgeltliche Auskunft über Ihre gespeicherten Daten sowie ggf. ein Recht auf Berichtigung, Sperrung oder Löschung dieser Daten. Sie können außerdem jederzeit die uns erteilte Einwilligung zur Datenerhebung und Verwendung ohne Angaben von Gründen widerrufen. Wenn Sie Fragen haben, die Ihnen diese Datenschutzerkl&auml;rung nicht beantworten konnte oder wenn Sie zu einem Punkt vertiefte Informationen wünschen, wenden Sie sich bitte jederzeit an info [at] okfn [dot] de.</p>
+                <p>VII. Fragen und Auskunftsrecht</p>
 
-            <p>VIII. Sicherheitshinweis</p>
+                <p>Ihr Vertrauen ist uns wichtig. Daher möchten wir Ihnen jederzeit und kostenlos Rede und Antwort bezüglich der Verarbeitung Ihrer personenbezogenen Daten stehen. Auch haben Sie nach dem Bundesdatenschutzgesetz ein Recht auf unentgeltliche Auskunft über Ihre gespeicherten Daten sowie ggf. ein Recht auf Berichtigung, Sperrung oder Löschung dieser Daten. Sie können außerdem jederzeit die uns erteilte Einwilligung zur Datenerhebung und Verwendung ohne Angaben von Gründen widerrufen. Wenn Sie Fragen haben, die Ihnen diese Datenschutzerkl&auml;rung nicht beantworten konnte oder wenn Sie zu einem Punkt vertiefte Informationen wünschen, wenden Sie sich bitte jederzeit an info [at] okfn [dot] de.</p>
 
-            <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p>
+                <p>VIII. Sicherheitshinweis</p>
 
+                <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p>
 
-          </div>
+            </div>
         </div>
-      </div>
     </div>
+</div>
